docs: add detailed documentation for 5 killer features
- docs/cli-commands.md: full reference for doctor, gclog, flame, watch, suggest
  - doctor: 8 health check rules table, exit codes, CI/CD usage
  - gclog: 7 tuning rules, supported formats, output sections
  - flame: all options table, profiling types
  - watch: display elements, keyboard controls
  - suggest: 4 workload profiles table
- docs/usage.md: add 5 new commands to key commands table

Signed-off-by: rlaope <piyrw9754@gmail.com>